--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ a {
 }
 
 .container {
-    width: 80%;
+    width: 90%;
     margin: auto;
 }
 
@@ -355,5 +355,37 @@ clear: both;
 }
 
 .blue_container_colonne{
-    padding: 50px 0;
+    padding: 80px 0;
+}
+
+.brands_left {
+    float: left;
+    width: 40%;
+}
+.brands_right {
+    float: right;
+    width: 60%;
+    text-align: right;
+}
+
+.brands_left h4 {
+    font-size: 45px;
+    color: rgb(51, 71, 91);
+    margin-bottom: 5px;
+}
+
+.brands_left p {
+    font-size: 21.6px;
+    font-weight: 300;
+    color: rgb(51, 71, 91);
+    line-height: 1.5;
+}
+
+.brands_container{
+    padding: 80px 0;
+}
+
+.brands_right img {
+    display: inline-block;
+    width: 90%;
 }
