--- a/style.css
+++ b/style.css
@@ -171,6 +171,7 @@ clear: both;
     background-position: bottom right;
     background-repeat: no-repeat;
     border-bottom: 1px solid rgba(51, 71, 91, 0.5);
+    box-shadow: inset 1px 7px 17px -4px rgba(0, 0, 0, 0.2);
 
 }
 .jumbo_wrap {
