--- a/style.css
+++ b/style.css
@@ -87,10 +87,47 @@ clear: both;
     top: 5px;
     color: rgba(0, 0, 0, 0.3)
 }
+
+
+
+
+
 .h_top_l #lingua {
     padding: 5px 20px 5px 0;
     border-right: 1px solid rgba(0, 0, 0, 0.5);
+
 }
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dd_options {
+  display: none;
+  position: absolute;
+}
+
+/* Links inside the dropdown */
+.dd_options a {
+  color: black;
+  padding: 12px 16px;
+  display: block;
+  line-height: 1;
+  background-color: yellow;
+}
+
+/* Change color of dropdown links on hover */
+.dd_options a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dd_options {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover #lingua {background-color: #3e8e41;}
+
 
 .h_top_r a {
     text-decoration: none;
@@ -537,7 +574,7 @@ footer {
 .footmid ul::after {
     content: '';
     width: 100%;
-    height: 0.5px;
+    height: 1px;
     background-color: white;
     display: block;
     margin: 25px 0;
