--- a/style.css
+++ b/style.css
@@ -98,35 +98,34 @@ clear: both;
 
 }
 
-/* The container <div> - needed to position the dropdown content */
 .dropdown {
   position: relative;
   display: inline-block;
 }
 
-/* Dropdown Content (Hidden by Default) */
 .dd_options {
   display: none;
   position: absolute;
 }
 
-/* Links inside the dropdown */
 .dd_options a {
-  color: black;
-  padding: 12px 16px;
+  color: rgb(51, 71, 91);
+  font-weight: bold;
+  padding: 15px 16px;
   display: block;
   line-height: 1;
-  background-color: yellow;
+  background-color: white;
+  font-size: 14px;
+  border: 1px solid #ededed;
 }
 
-/* Change color of dropdown links on hover */
-.dd_options a:hover {background-color: #ddd;}
+.dd_options a:hover {
+    background-color: #e5f5f8;
+}
 
-/* Show the dropdown menu on hover */
-.dropdown:hover .dd_options {display: block;}
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover #lingua {background-color: #3e8e41;}
+.dropdown:hover .dd_options {
+    display: block;
+}
 
 
 .h_top_r a {
